<resources>
    <string name="app_name">GrowUMKM</string>
    <string name="title1_login_page">Sudah siap untuk Berinvestasi dengan UMKM?</string>
    <string name="title2_login_page">Masukkan Email Anda</string>
    <string name="title3_login_page">Belum punya akun ?</string>
    <string name="title1_signup_page">Daftar Akun Baru</string>
    <string name="title2_signup_page">Lengkapi data dirimu dibawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registerhint">Belum Punya akun?</string>
    <string name="regist">Belum punya akun?, daftar sekarang</string>
    <string name="login">Masuk</string>
    <string name="nama">Nama</string>
    <string name="nomertelefon">Nomer Telefon</string>
    <string name="kota">Kota</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_portfolio">Portfolio</string>
    <string name="title_profile">Profile</string>
    <string name="search_investor">Search Investor\n</string>
    <string name="message_detail_item">message</string>
    <string name="investor_detail">Investor</string>
    <string name="terkumpul_detail">Terkumpul</string>
    <string name="sisa_hari_detail">Sisa Hari</string>
    <string name="deviden_detail">Deviden/Bulan</string>


    <string name="desc_detail">Deskripsi</string>
    <string name="doc_detail">Dokumen</string>
    <string name="rating_detail">Rating</string>
    <string name="invest_title">Berapa banya yang ingin kamu\n investasikan hari ini</string>
    <string name="nominal_investasi">Nominal Investasi</string>
    <string name="dummy_number_porto">Rp. 0000.000.000</string>
    <string name="number_show">Rp. 0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_umkm">Serambi Notsuman Yogyakarta</string>
    <string name="dummy_comment">Umkm ini sangat rekomendasi karena membagikan deviden yang sesuai dan tepat waktu</string>
    <string name="dummy_date">23/11/2023 09.00</string>
    <string name="portofolio">Portofolio</string>
    <string name="dummy_name">Lorem Ipsum Dolor Sit Amet User Validate</string>
    <string name="dummy_email">dummy@email.com</string>
    <string name="dummy_nomor">0888 9000 2000</string>
    <string name="dummy_city">Surakarta</string>

    <string name="term_policy">jadi ceritnaya disini nanti term policy nya</string>
    <string name="name_tim">M013BSY0076 – Yosi Ronadi \nM180BSX0917 – Quinolina Thifal \nM180BSX0283 – Emmanuella Aurelia Rachel Passa\nC481BSX3704 – Kharisma Vidya Prakusa \nC175BSY3143 – Rizky Budiarto \nA175BSY2969 – Arief Kurniawan\nA524BSY2375 - Mohammad Hollandi Sumari \n</string>
    <string name="input_for_email">Input tidak sesuai</string>
    <string name="password_warning">Minimal 8 Karakter\n</string>
    <string name="title_login_page">Sudah siap berinvestasi dengan UMKM?</string>
    <string name="message_login_page">Mulai Sekarang</string>
    <string name="loading_asset">Memuat</string>
    <string name="retry">Memuat</string>
    <string name="not_availabel">anda sedang mencoba mengakses fitur pencarian maaf saat ini belum tersedia</string>

    <string-array name="provinsi">
        <item>Aceh</item>
        <item>Sumatera Barat</item>
        <item>Bali</item>
        <item>Bangka Belitung</item>
        <item>Banten</item>
        <item>Bengkulu</item>
        <item>Sulawesi Selatan</item>
        <item>Sulawesi Tengah</item>
        <item>Sulawesi Tenggara</item>
        <item>Sulawesi Utara</item>
        <item>Jambi</item>
        <item>Jawa Barat</item>
        <item>Jawa Tengah</item>
        <item>Jawa Timur</item>
        <item>Kalimantan Barat</item>
        <item>Kalimantan Selatan</item>
        <item>Kalimantan Tengah</item>
        <item>Kalimantan Timur</item>
        <item>Kalimantan Utara</item>
        <item>Kepulauan Riau</item>
        <item>Lampung</item>
        <item>Maluku</item>
        <item>Maluku Utara</item>
        <item>Nusa Tenggara Barat</item>
        <item>Nusa Tenggara Timur</item>
        <item>Papua</item>
        <item>Papua Barat</item>
        <item>Riau</item>
        <item>Sulawesi Barat</item>
        <item>Sulawesi Utara</item>
        <item>Sulawesi Selatan</item>
        <item>Sulawesi Utara</item>
        <item>Yogyakarta</item>
    </string-array>
    <string name="title_term_policy"> KEBIJAKAN </string>
    <string name="point1"> Kebijakan Privasi:  </string>
    <string name="point2"> Keamanan Data:  </string>
    <string name="point3"> Tanggung Jawab Pengguna: </string>
    <string name="point4"> Layanan dan Dukungan: </string>
    <string name="isi1">Pengumpulan Informasi:\nPrivasi Pengguna: Aplikasi akan melindungi data pribadi pengguna dan hanya mengumpulkan informasi yang relevan dengan penggunaan aplikasi.\nPenggunaan Informasi:\nPenggunaan Data: Informasi yang dikumpulkan akan digunakan untuk keperluan fungsional aplikasi, peningkatan layanan, dan tidak akan dibagikan kepada pihak ketiga tanpa izin pengguna.</string>
    <string name="isi2">Perlindungan Data:\nKeamanan Data: Aplikasi akan mengimplementasikan langkah-langkah keamanan yang sesuai untuk melindungi data pengguna dari akses yang tidak sah atau penyalahgunaan.\nEnkripsi dan Proteksi:\nEnkripsi: Data sensitif akan dienkripsi dan akan dilindungi dengan standar keamanan yang diperlukan untuk menghindari risiko kebocoran informasi.</string>
    <string name="isi3">Penggunaan yang Bertanggung Jawab:\nPenggunaan yang Etis: Pengguna diminta untuk menggunakan aplikasi dengan bertanggung jawab, menghindari perilaku yang merugikan atau melanggar hukum.\nKonten yang Dapat Dibagikan:\nKonten yang Dapat Dibagikan: Pengguna harus memastikan bahwa konten yang dibagikan di dalam aplikasi tidak melanggar hak cipta atau hak privasi pihak lain.</string>
    <string name="isi4">Pemeliharaan Aplikasi:\nPemeliharaan dan Pembaruan: Aplikasi akan menerima pembaruan dan perbaikan berkala untuk memastikan kinerja optimal dan keamanan.\nDukungan Pengguna:\nDukungan Pengguna: Aplikasi akan menyediakan saluran dukungan bagi pengguna yang membutuhkan bantuan atau memiliki pertanyaan seputar penggunaan aplikasi.</string>


</resources>