<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="81dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_investasi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.526" />

        <TextView
            android:id="@+id/tv_status_riwayat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/dm_sans_1"
            android:text="Invest"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.357"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_umkm_item_riwayat"
            android:layout_width="104dp"
            android:layout_height="23dp"
            android:layout_marginEnd="72dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/dummy_umkm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_status_riwayat"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_status_riwayat"
            app:layout_constraintTop_toBottomOf="@+id/tv_status_riwayat"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_date_transaksi_riwayat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/dummy_date"
            android:textSize="10dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_umkm_item_riwayat"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_umkm_item_riwayat"
            app:layout_constraintTop_toTopOf="@+id/tv_umkm_item_riwayat" />

        <TextView
            android:id="@+id/tv_nominal_riwayat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/dm_sans_1"
            android:text="@string/dummy_number_porto"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_umkm_item_riwayat"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.512" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>