<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/back_dialog_profile"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/btn_back_profile_global"
                android:src="@drawable/ic_back"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Data Diri"
                android:textSize="30dp"
                android:fontFamily="@font/dm_sans_1"
                android:gravity="center"
                android:layout_gravity="center" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nama : "
                android:fontFamily="@font/dm_sans_2"
                android:textSize="20dp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_nama_user_holder"
                android:text="@string/dummy_name"
                android:fontFamily="@font/dm_sans_2"
                android:textSize="20dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email : "
                android:fontFamily="@font/dm_sans_2"
                android:textSize="20dp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_email_user_holder"
                android:text="@string/dummy_email"
                android:fontFamily="@font/dm_sans_2"
                android:textSize="20dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nomor : "
                android:fontFamily="@font/dm_sans_2"
                android:textSize="20dp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_nomor_user_holder"
                android:text="@string/dummy_nomor"
                android:fontFamily="@font/dm_sans_2"
                android:textSize="20dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kota : "
                android:fontFamily="@font/dm_sans_2"
                android:textSize="20dp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_user_kota_holder"
                android:text="@string/dummy_city"
                android:fontFamily="@font/dm_sans_2"
                android:textSize="20dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>
    </LinearLayout>


</androidx.cardview.widget.CardView>
