<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:backgroundTintMode="screen"
            android:outlineSpotShadowColor="@color/black"
            android:id="@+id/toolbar_detail_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/detail_menu">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_back_detail"
                android:src="@drawable/ic_back"/>
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_gravity="center"
                android:text="Serambi Notosuman"
                android:maxLines="1"
                android:ellipsize="end"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_detail"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_detail"
        tools:layout_editor_absoluteX="25dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/img_umkm_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img"
            android:scaleType="centerCrop"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_name_umkm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:ellipsize="end"
        android:fontFamily="@font/dm_sans_1"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/dummy_umkm"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/tv_tag_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/corner_for_tag"
        android:fontFamily="@font/dm_sans_2"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="Food"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_umkm" />

    <ImageView
        android:id="@+id/btn_calculate"
        android:layout_width="53dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="76dp"
        android:src="@drawable/ic_calculator_inv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_umkm"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"/>


    <ImageView
        android:id="@+id/btn_add_to_favorite"
        android:layout_width="53dp"
        android:layout_height="46dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_favorite_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_calculate"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_umkm"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"/>

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"

        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gd_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_1"
                android:text="@string/terkumpul_detail" />

            <TextView
                android:id="@+id/tv_terkumpul_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/dm_sans_1"
                android:textColor="@color/item_detail_color"
                android:text="Rp. 1000.000" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="32dp"

        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gd_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_1"
                android:text="@string/investor_detail" />

            <TextView
                android:id="@+id/tv_detail_investor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/dm_sans_1"
                android:textColor="@color/item_detail_color"
                android:text="Rp. 1000.000" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gd_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_1"
                android:text="@string/sisa_hari_detail" />

            <TextView
                android:id="@+id/tv_detail_deviden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/dm_sans_1"
                android:textColor="@color/item_detail_color"
                android:text="10 Hari" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gd_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_1"
                android:text="@string/deviden_detail" />

            <TextView
                android:id="@+id/tv_detail_sisa_hari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/dm_sans_1"
                android:textColor="@color/item_detail_color"
                android:text="2,5 %" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_invest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:fontFamily="@font/dm_sans_1"
        android:text="Invest Sekarang"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gd_2">

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/tab_layout_detail"
            app:tabIndicator="@drawable/tab_indicator"
            app:tabIndicatorAnimationMode="elastic"
            app:tabIndicatorGravity="stretch"
            app:tabIndicatorFullWidth="true"
            app:tabTextColor="@color/black"

            app:tabMode="fixed" />

    </androidx.cardview.widget.CardView>

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/detail_view_pager"
        app:layout_constraintTop_toBottomOf="@+id/guideline4"
        android:layout_marginTop="600dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gd_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="415dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gd_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="535dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="603dp" />


</androidx.constraintlayout.widget.ConstraintLayout>